# marvin

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  app.py  pyproject.toml  start.sh
agent/: deps.py  initialize_agent.py  model.py  prompt.py  tools.py
config/: settings.py
data/: profile.example.txt
data/imports/: accounts.example.csv  balances.example.csv  holdings.example.csv  transactions.example.csv
frontend/: .env.local.example  AGENTS.md  README.md  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
ingestion/: csv_loader.py  importer.py  seed.py
models/: finance.py  summaries.py  validators.py
scripts/: import_data.py
services/: analysis.py  market_data.py  profile.py  spending.py  symbols.py  valuation.py
storage/: conversation_memory.py  db.py  queries.py  repository.py  session.py
tests/: conftest.py  helpers.py  test_analysis.py  test_api.py  test_app_entry.py  test_chat_history.py  test_conversation_memory.py  test_conversations_api.py  test_csv_loader.py  test_db.py  test_deps.py  test_finance.py  test_import_data.py  test_importer.py  test_initialize_agent.py  test_market_data.py  test_model.py  test_packages.py  test_profile.py  test_prompt.py  test_queries.py  test_repository.py  test_request.py  test_seed.py  test_session.py  test_settings.py  test_spending.py  test_tools.py  test_validators.py  test_valuation.py  test_web_app.py
web/: app.py  chat_history.py  conversations.py  dependencies.py  lifespan.py  request.py  schemas.py
web/memory/: runtime.py
(+93 files in other folders)
